# decent-whisper

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  setup.py
decent_whisper/: __init__.py  __main__.py  model.py  vad.py
decent_whisper/backends/: faster_whisper.py  insanely_fast_whisper.py  mlx_whisper.py  mlx_whisper_decoding.py  mlx_whisper_transcribe.py  transformers_whisper.py
src/decent_whisper/: __init__.py
src/decent_whisper/backends/: faster_whisper.py  insanely_fast_whisper.py  lightning_whisper_mlx.py
tests/: test_backends.py
