[project]
name = "decent-whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jaro Habiger", email = "jarohabiger@googlemail.com" },
    { name = "Philipp Mandler", email = "info@philipp-mandler.com" },
]
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub~=0.34.1",
    "tqdm~=4.0",
    "faster-whisper~=1.1.1",
    "mlx-whisper==0.4.3; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx>=0.12.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
